--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -7,6 +7,7 @@
     
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#image {
@@ -28,6 +29,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
     
     section#login > div#image {
@@ -45,6 +47,7 @@
         font-size: 2em;
     }
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
